[project]
name = "test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate==1.9.0",
    "aiofiles==24.1.0",
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.12.14",
    "aiosignal==1.4.0",
    "annotated-types==0.7.0",
    "anyio==4.9.0",
    "async-timeout==4.0.3",
    "attrs==25.3.0",
    "backoff==2.2.1",
    "backports-tarfile==1.2.0",
    "bcrypt==4.3.0",
    "brotli==1.1.0",
    "build==1.2.2.post1",
    "cachecontrol==0.14.3",
    "cachetools==5.5.2",
    "certifi==2025.7.14",
    "cffi==1.17.1",
    "charset-normalizer==3.4.2",
    "chromadb==1.0.15",
    "cleo==2.1.0",
    "click==8.2.1",
    "colorama==0.4.6",
    "coloredlogs==15.0.1",
    "crashtest==0.4.1",
    "cryptography==45.0.5",
    "dataclasses-json==0.6.7",
    "distlib==0.4.0",
    "distro==1.9.0",
    "dulwich==0.22.8",
    "durationpy==0.10",
    "exceptiongroup==1.3.0",
    "fastapi==0.116.1",
    "fastjsonschema==2.21.1",
    "ffmpy==0.6.1",
    "filelock==3.18.0",
    "findpython==0.6.3",
    "flatbuffers==25.2.10",
    "frozenlist==1.7.0",
    "fsspec==2025.7.0",
    "google-auth==2.40.3",
    "googleapis-common-protos==1.70.0",
    "gradio==5.38.0",
    "gradio-client==1.11.0",
    "greenlet==3.2.3",
    "groovy==0.1.2",
    "grpcio==1.73.1",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httptools==0.6.4",
    "httpx==0.28.1",
    "httpx-sse==0.4.1",
    "huggingface-hub==0.33.4",
    "humanfriendly==10.0",
    "idna==3.10",
    "importlib-metadata==8.7.0",
    "importlib-resources==6.5.2",
    "installer==0.7.0",
    "jaraco-classes==3.4.0",
    "jaraco-context==6.0.1",
    "jaraco-functools==4.2.1",
    "jinja2==3.1.6",
    "joblib==1.5.1",
    "jsonpatch==1.33",
    "jsonpointer==3.0.0",
    "jsonschema==4.25.0",
    "jsonschema-specifications==2025.4.1",
    "keyring==25.6.0",
    "kubernetes==33.1.0",
    "langchain==0.3.26",
    "langchain-community==0.3.27",
    "langchain-core==0.3.71",
    "langchain-text-splitters==0.3.8",
    "langsmith==0.4.8",
    "markdown-it-py==3.0.0",
    "markupsafe==3.0.2",
    "marshmallow==3.26.1",
    "mdurl==0.1.2",
    "mmh3==5.1.0",
    "more-itertools==10.7.0",
    "mpmath==1.3.0",
    "msgpack==1.1.1",
    "multidict==6.6.3",
    "mypy-extensions==1.1.0",
    "networkx==3.4.2",
    "numpy==2.2.6",
    "oauthlib==3.3.1",
    "ollama==0.5.1",
    "onnxruntime==1.22.1",
    "opentelemetry-api==1.35.0",
    "opentelemetry-exporter-otlp-proto-common==1.35.0",
    "opentelemetry-exporter-otlp-proto-grpc==1.35.0",
    "opentelemetry-proto==1.35.0",
    "opentelemetry-sdk==1.35.0",
    "opentelemetry-semantic-conventions==0.56b0",
    "orjson==3.11.0",
    "overrides==7.7.0",
    "packaging==25.0",
    "pandas==2.3.1",
    "pbs-installer==2025.7.12",
    "pdfminer-six==20250506",
    "pdfplumber==0.11.7",
    "pillow==11.3.0",
    "pkginfo==1.12.1.2",
    "platformdirs==4.3.8",
    "poetry==2.1.3",
    "poetry-core==2.1.3",
    "posthog==5.4.0",
    "propcache==0.3.2",
    "protobuf==6.31.1",
    "psutil==7.0.0",
    "pyasn1==0.6.1",
    "pyasn1-modules==0.4.2",
    "pybase64==1.4.1",
    "pycparser==2.22",
    "pydantic==2.11.7",
    "pydantic-core==2.33.2",
    "pydantic-settings==2.10.1",
    "pydub==0.25.1",
    "pygments==2.19.2",
    "pypdf==5.8.0",
    "pypdfium2==4.30.0",
    "pypika==0.48.9",
    "pyproject-hooks==1.2.0",
    "pyreadline3==3.5.4",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.1.1",
    "python-multipart==0.0.20",
    "pytz==2025.2",
    "pywin32-ctypes==0.2.3",
    "pyyaml==6.0.2",
    "rapidfuzz==3.13.0",
    "referencing==0.36.2",
    "regex==2024.11.6",
    "requests==2.32.4",
    "requests-oauthlib==2.0.0",
    "requests-toolbelt==1.0.0",
    "rich==14.0.0",
    "rpds-py==0.26.0",
    "rsa==4.9.1",
    "ruff==0.12.4",
    "safehttpx==0.1.6",
    "safetensors==0.5.3",
    "scikit-learn==1.7.1",
    "scipy==1.15.3",
    "semantic-version==2.10.0",
    "sentence-transformers==5.0.0",
    "shellingham==1.5.4",
    "six==1.17.0",
    "sniffio==1.3.1",
    "sqlalchemy==2.0.41",
    "starlette==0.47.2",
    "sympy==1.13.1",
    "tenacity==9.1.2",
    "threadpoolctl==3.6.0",
    "tokenizers==0.21.2",
    "tomli==2.2.1",
    "tomlkit==0.13.3",
    "torch>=2.6.0",
    "tqdm==4.67.1",
    "transformers==4.53.3",
    "trove-classifiers==2025.5.9.12",
    "typer==0.16.0",
    "typing-extensions==4.14.1",
    "typing-inspect==0.9.0",
    "typing-inspection==0.4.1",
    "tzdata==2025.2",
    "urllib3==2.5.0",
    "uvicorn==0.35.0",
    "virtualenv==20.32.0",
    "watchfiles==1.1.0",
    "websocket-client==1.8.0",
    "websockets==15.0.1",
    "yarl==1.20.1",
    "zipp==3.23.0",
    "zstandard==0.23.0",
]
